# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Oct 20 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved implementation of method ResultSetMetaData.getPrecision(). It
  now returns more accurate values for columns of type DECIMAL, NUMERIC,
  CHAR, VARCHAR, CLOB, JSON, URL and BLOB.
- Improved implementation of method ResultSetMetaData.getScale(). It now
  returns more accurate values for columns of type DECIMAL and NUMERIC.

* Thu Sep 29 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Removed creation and distribution of monetdb-mcl-1.##.jre8.jar file.
  Programmers who used this jar file should use monetdb-jdbc-3.#.jre8.jar file.

* Wed Aug 24 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved DatabaseMetaData.getBestRowIdentifier(). When there are multiple
  unique constraints and no pkey for a table it used to return the columns
  of all the table unique constraints. Now it only returns the columns of
  the first table unique constraint.
  Also optimized the performance of getBestRowIdentifier(). It used to
  send a separate query first to find out if the table had a pkey or not.
  This extra query is now integrated so less queries are send to the server.

* Wed Mar 30 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected DatabaseMetaData methods getPrimaryKeys(), getBestRowIdentifier()
  and getIndexInfo() for local temporary tables located in schema tmp. They
  did not return any rows when the temp table had a primary or unique key or
  index. Now they do return rows as expected.

* Thu Feb 10 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Added recognition of 'xml' type. Use default mapping to Types.VARCHAR for
  easy and fast (as java.lang.String) retrieval, display and setting data of
  columns of type 'xml'.

* Thu Jan 27 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>